namespace CoinCollect2.Items.Coins
{
    public enum CoinType
    {
        Gold,
        Silver,
        Copper,
    }
}