@startuml
'https://plantuml.com/class-diagram
namespace Player{
    PlayerComponentFactory <.. PlayerContactDetector
    ScoreCalucurator .> CoinCollector
    PlayerComponentFactory -Result.ResultView
    
    class CoinCollector{
        Dictionary<CoinType,int> collectCoinNumber              
    }
    class PlayerMover{
        Move()
    }
    class PlayerComponentFactory{
    }
    class PlayerContactDetector{}
    class ScoreCalucurator{
    }
}

Items.ITouchble <. Player.PlayerContactDetector
Player.PlayerContactDetector <-- Player.CoinCollector

namespace Items{
    Items.ITouchble <|..  Items.Coins.Coin
    Items.Coins.CoinGenerator --  Items.Coins.Coin
    Items.Coins.Coin --  Items.Coins.CoinType
    interface ITouchble{
        touch()
    }

}
namespace Items.Coins{
    class Coin{
        CoinType type
        touch()   
    }
   
    class CoinGenerator{
        void Generate()
        void GenerateLoop()
    }
    class CoinShaderController{}
    enum CoinType{
    }
}
namespace InGameUI{
    class view{
        # CoinCollecter CoinCollecter
        
    }
}

'リザルト結果
namespace Result{
    class ResultView{   
    }

}

namespace GameLoops{
    GameLoop ..> Items.Coins.CoinGenerator
    GameLoop ..> Result.ResultView
    class GameLoop{}
}
namespace GoToTitles{
    class GoTOTitle{}
}
@enduml